# Lab_2

./: .travis.yml  CMakeLists.txt  a.travis.yml
Tests/: main.cpp  print_hello_world.cpp
examples/: main.cpp
sources/: incr.cpp  print_hello_world.cpp
